--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Homeamde Ramen</title>
+    <link rel="stylesheet" href="/recipe_style.css">
   </head>
 
   <body>
@@ -12,16 +13,53 @@
          You'll never use a flavor packet again once you try this protein-packed, flavorful, brothy, noodle soup.<p></p>
     </section>
     <section class="recipe">
-        <h2>Ingredients</h2>
+        <h2>Ingredients</h2>\
+        <h3>Mushrooms & Chicken</h3>
         <ul>
-
+            <li>2 tablespoons olive oil, divided</li>
+            <li>2 tablespoons butter, divided</li>
+            <li>8 oz. mushrooms</li>
+            <li>1 large boneless/skinless chicken breast, about ¾ lb.</li>
+            <li>Salt/Pepper</li>
         </ul>
+        <h3>Soup</h3>
+        <ul>
+            <li>½ cup dry white wine</li>
+            <li>1 tablespoon butter</li>
+            <li>3 cloves garlic, minced</li>
+            <li>6 cups low sodium chicken broth</li>
+            <li>2 tablespoons low sodium soy sauce</li>
+            <li>2 teaspoons hot sauce</li>
+            <li>2 teaspoons honey</li>
+            <li>¾ teaspoon toasted sesame seed oil</li>
+            <li>2 (3 oz.) packets instant Ramen noodles, don't use flavor packet</li>
+            <li>6 leaves Bok Choy, roughly chopped</li>
+        </ul>
+
+        <h3>Seasonings</h3>
+        <ul>
+            <li>¾ teaspoon EACH: onion powder, mustard powder</li>
+            <li>¼ teaspoon ground ginger</li>
+            <li>1/8 teaspoon white pepper</li>
+            <li>1 pinch red pepper flakes</li>
+        </ul>
+        <h3>Serving</h3>
+        <ul>
+            <li>Green Onions</li>
+            <li>Roughly chopped honey roasted peanuts</li>
+            <li>Soft boiled eggs</li>
+        </ul>
+        <h2>Instructions</h2>
         <ol>
-            <li>Step 1: Heat olive oil and butter in a soup pot and sauté the mushrooms until golden on each side. Set aside.</li>
-            <li>Step 2: Slice the chicken in half lengthwise to create 2 thinner slices. Tenderize it with a meat mallet and season with salt and pepper. Sear in olive oil and set aside.</li>
-            <li> Step 3: Add white wine to the same skillet. Use a silicone spatula to “clean” the pot and let the liquid bubble gently until reduced by half. Add the butter and garlic.</li>
-            <li>Step 4: Add the chicken broth, soy sauce, hot sauce, honey, sesame oil, and soup seasonings. Simmer while you soft boil eggs (see notes section of recipe card). Bring to a boil and add the ramen. Cook for 1 minute.</li>
-            <li> Step 5: Reduce to a simmer and add the Bok Choy and cooked mushrooms and chicken. Simmer until noodles are cooked through. Transfer to serving bowls and top with roughly chopped peanuts, green onions, and soft boiled eggs.</li>
+            <li>Heat 1 tablespoon olive oil and 1 tablespoon of butter in a large soup pot over medium-high heat. Add the mushrooms. Sauté until golden, about 4 minutes. Remove and set aside so that they retain the color, flavor, and texture.</li>
+            <li>Slice the chicken in half lengthwise to create 2 thinner slices. Cover with saran wrap and use the textured side of a meat mallet to pound it to ½ inch thick.</li>
+            <li>Pat the chicken dry and season each side with salt and pepper.</li>
+            <li>Heat remaining olive oil and butter in a large soup pot over medium-high heat. Sear the chicken in batches for 4-5 minutes per side, until a golden crust has developed. Set aside turn the heat off. Let the chicken rest for 10 minutes, then cut into strips of desired size.</li>
+            <li>Add the wine and set the heat to medium. Use a silicone spatula to “clean” the bottom and sides of the skillet. Let the wine bubble gently and reduce by half, 4-5 minutes.</li>
+            <li>Add the butter and garlic and cook for 2 minutes.</li>
+            <li>Add the chicken broth, soy sauce, hot sauce, honey, sesame oil, and soup seasonings. Bring to a gentle boil and let the broth reduce and concentrate for 10 minutes while you soft boil eggs for serving (see notes for instructions).</li>
+            <li>Bring the soup to a more rapid boil, add the Ramen, and cook for 1 minute. Reduce to a gentle simmer and add the Bok Choy along with the cooked mushrooms and chicken. Simmer until the noodles are done, about 3 minutes.</li>
+            <li>Transfer to serving bowls and top with green onions, roughly chopped peanuts, and a soft-boiled egg.</li>
         </ol>
     </section>
   </body>
