Added home button to recipes and better colors

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Homeamde Ramen</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="recipe_style.css">
   </head>
 
   <body>
     <header>
-        <a href="../index.html">Home</a>
+        <div class="w3-padding w3-xxlarge">
+            <i class="fa fa-home"><a href="../index.html">Home</a></i>
+        </div>
     </header>
     <div id="contents">
         <h1>Ramen</h1>
