Added style.css for mainpage

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/ramen.html">Homemade Ramen</a>
+    <div class="container">
+      <a href="recipes/ramen.html">Homemade Ramen</a>
+      <a href="recipes/ramen.html">Homemade Ramen</a>
+      <a href="recipes/ramen.html">Homemade Ramen</a>
+      <a href="recipes/ramen.html">Homemade Ramen</a>
+  </div>
   </body>
 </html>
