added styling for index page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <h1>Odin Recipes</h1>
     <div class="container">
-      <a href="recipes/ramen.html">Homemade Ramen</a>
-      <a href="recipes/ramen.html">Homemade Ramen</a>
-      <a href="recipes/ramen.html">Homemade Ramen</a>
-      <a href="recipes/ramen.html">Homemade Ramen</a>
+      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
+      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
+      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
+      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
   </div>
   </body>
 </html>
