Finished styling for main page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,32 @@
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <div>
+      <h1 id="header">Odin Recipes</h1>
+    </div>
     <div class="container">
-      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
-      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
-      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
-      <div class="item"><a href="recipes/ramen.html">Homemade Ramen</a></div>
+      <div class="item">
+        <a href="recipes/ramen.html">
+          <img src="recipes/img/HomemadeRamen.jpg" alt="Homemade Ramen">
+          <span class="text-overlay"><h2>Homemade Ramen</h2></span>
+        </a>
+      </div>
+      <div class="item">
+        <a href="recipes/ramen.html">
+          <img src="recipes/img/HomemadeRamen.jpg">
+        </a>
+      </div>
+      <div class="item">
+        <a href="recipes/ramen.html">
+          <img src="recipes/img/HomemadeRamen.jpg">
+        </a>
+      </div>
+      <div class="item">
+        <a href="recipes/ramen.html">
+          <img src="recipes/img/HomemadeRamen.jpg">
+        </a>
+      </div>
   </div>
+  <footer><p>Made for The Odin Project</p></footer>
   </body>
 </html>
