Minor text changes on images

--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
       <div class="item">
         <a href="recipes/ramen.html">
           <img src="recipes/img/HomemadeRamen.jpg">
+          <span class="text-overlay"><h2>Placeholder</h2></span>
         </a>
       </div>
       <div class="item">
         <a href="recipes/ramen.html">
           <img src="recipes/img/HomemadeRamen.jpg">
+          <span class="text-overlay"><h2>Placeholder</h2></span>
         </a>
       </div>
       <div class="item">
         <a href="recipes/ramen.html">
           <img src="recipes/img/HomemadeRamen.jpg">
+          <span class="text-overlay"><h2>Placeholder</h2></span>
         </a>
       </div>
   </div>
